# dominode

./: .gitignore  CODEOWNERS  README.md
charts/dominode/: .gitignore  Chart.yaml  README.md  values.yaml
dominode-bootstrapper/: Dockerfile  README.rst  pyproject.toml
dominode-bootstrapper/dominode_bootstrapper/: constants.py  dbadmin.py  dominodeadmin.py  geonodeadmin.py  minioadmin.py  utils.py
dominode-bootstrapper/script/: dockerbuild.py
dominode-bootstrapper/sql/: finalize-bootstrap-db.sql
dominode-bootstrapper/tests/: conftest.py  test_bootstrap_db.py
dominode-bootstrapper/tests/interactive/: docker-compose.yml
extra/dominode-bootstrapper/: .dockerignore
extra/dominode-extra/: README.rst  pyproject.toml
extra/dominode-extra/dominode_extra/: constants.py  dbadmin.py  dominodeadmin.py  minioadmin.py
extra/dominode-extra/tests/: conftest.py  test_bootstrap_minio.py
geonode_dominode/: .gitignore  README.md  manage.py  pavement.py  setup.py  tasks.py
geonode_dominode/geonode_dominode/: __init__.py  apps.py  celeryapp.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
qgis-projects/: DD_Index.geojson  README.md  dominode-topomaps.qgs  topomap-dev-verbose.md
qgis-projects/scripts/: README.md  activate_styles.txt  export_styles.py  export_templates.py  index_sheet_spec.xlsx  layer_list.txt  layout_guide_calculator.xlsx  layout_guide_generator.txt  styles.txt  town_names.txt
qgis-projects/styles/: Beaches-5k.sld  Beaches-tourism.qml  Coastline-50k.qml  Coastline-5k.sld  Contours-5k.qml  DegreeBlock-10k.sld  District Boundaries-5k.sld  District Boundaries-tourism.qml  Estates-10k.sld  Estates-5k.qml  Hospitals-10k.qml  Landmass-5k.sld  Marine Biomes-50k.qml  Peaks-2.5k.sld  default.sld  (+17 more)
sql/: bootstrap-db.sql
(+59 files in other folders)
