[tool.poetry]
name = "dominode-extra"
version = "0.1.0"
description = ""
authors = ["Ricardo Garcia Silva <ricardo.garcia.silva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
docker = "^4.2.2"
psycopg2-binary = "^2.8.5"
sqlalchemy = "^1.3.18"
ipython = "^7.16.1"
pytest-raises = "^0.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
